<resources>
    <string name="app_name">创先泰克云</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="two_out_system">在按一次退出程序</string>
    <string name="live">直播</string>
    <string name="micro">微册</string>
    <string name="school_published">学校榜</string>
    <string name="micro_published">微册馆</string>
    <string name="my">我的</string>
    <string name="out_login">退出登陆</string>
    <string name="no_login">您尚未登陆</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密码</string>
    <string name="user_reset_password">重置密码</string>
    <string name="user_register">注册</string>
    <string name="user_login">登陆</string>
    <string name="no_username">用户名不能为空</string>
    <string name="no_password">密码不能为空</string>
    <string name="username_password_error">用户名或密码错误</string>
    <string name="all_username_password_error">用户名和密码错误</string>
    <string name="hint">提示</string>
    <string name="is_query_out_login">确定要退出登陆吗</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="keep_list">关注列表</string>
    <string name="about_we">关于我们</string>
    <string name="person_message">个人资料</string>
    <string name="photo">头像</string>
    <string name="nickname">昵称</string>
    <string name="phone">手机号</string>
    <string name="no_phone">手机号不能为空</string>
    <string name="no_yzm">验证码不能为空</string>
    <string name="is_verify">该手机号已在其他地方登陆</string>
    <string name="update_nickname">修改昵称</string>
    <string name="update_password">修改密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_affirm_password">请输入确认密码</string>
    <string name="nickname_no_null">昵称不能为空</string>
    <string name="password_no_null">密码不能为空</string>
    <string name="two_password_fit">两次输入的密码要一致</string>
    <string name="shooting">拍摄</string>
    <string name="switch_photo">选择图片</string>
    <string name="update_succeed">修改成功</string>
    <string name="update_nothing">修改失败</string>
    <string name="yzm">验证码</string>
    <string name="get_yzm">获取验证码</string>
    <string name="hint_phone">手机号(+86)</string>
    <string name="yes_username_register">该用户名已被注册</string>
    <string name="no_register_phone">手机号格式不对</string>
    <string name="input_no_null">输入的信息不能为空</string>
    <string name="user_new_password">新密码</string>
    <string name="user_affirm_new_password">确认新密码</string>
    <string name="default_keep">默认关注</string>
    <string name="setting_default_keep">设为默认关注</string>
    <string name="ok_keep">已关注</string>
    <string name="keep">关注</string>
    <string name="cancel_keep">取消关注</string>
    <string name="share">分享</string>
    <string name="no_school">请选择学校</string>
    <string name="no_after_another">(排名不分先后)</string>
    <string name="after_login">请先登录</string>
    <string name="set_qrc">识别二维码</string>
    <string name="yes_cancel">已取消</string>
    <string name="yes_live">直播中</string>
    <string name="style">主题</string>



    <string name="net_connect_succeed">数据请求成功</string>
    <string name="net_connect_data_empty">暂无内容</string>
    <string name="net_not_connected">发送请求失败，请检查网络连接</string>
    <string name="net_server_connected_error">连接服务器失败，请稍后重试</string>
    <string name="net_server_error">服务器处理请求失败，请稍后重试</string>
    <string name="net_server_param_error">应用数据出错，请刷新重试</string>
    <string name="net_unknown_error">未知错误，请稍后重试</string>

    <!-- 刷新-->
    <string name="pushmsg_center_no_more_msg"></string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最近更新：</string>
    <string name="pushmsg_center_load_more_ongoing_text">加载中...</string>
    <string name="xsearch_loading">加载中…</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以加载</string>
    <string name="pull_to_refresh_header_hint_ready">释放可以加载</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <string name="update_at">最近更新:&#160;</string>
    <string name="update_at_null">最近更新: 从未</string>
    <string name="drop_down_list_header_default_text">点击刷新&#8230;</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新&#8230;</string>
    <string name="drop_down_list_header_release_text">松开即可刷新&#8230;</string>
    <string name="drop_down_list_header_loading_text">正在刷新...</string>
    <string name="drop_down_list_footer_default_text">加载更多...</string>
    <string name="drop_down_list_footer_loading_text">努力加载中...</string>
    <string name="drop_down_list_footer_no_more_text">暂无更多</string>

</resources>
