<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable name="presneter" type="cn.com.cretech.presenter.ResetPasswordPresenter"/>
        <variable name="resetPasswordModel" type="cn.com.cretech.model.ResetPasswordModel"/>

    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <include layout="@layout/title_bar"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_distance_50"
                android:paddingRight="@dimen/dimen_distance_15"
                android:paddingLeft="@dimen/dimen_distance_15"
                android:background="@android:color/white"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/et_phone"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/phone"
                    android:text="@={resetPasswordModel.phone}"
                    android:inputType="phone"
                    android:background="@color/white"
                    android:textSize="@dimen/dimen_size_14"
                    android:maxLength="11"
                    android:textColor="@android:color/black" />

            <TextView
                    android:id="@+id/tv_get_yzm"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:onClick="@{() -> presneter.getYZM(resetPasswordModel.phone)}"
                    android:textColor="@color/rg_blue"
                    android:textSize="@dimen/dimen_size_14"
                    android:layout_height="@dimen/dimen_distance_36"
                    android:text="获取验证码"/>

        </LinearLayout>
        <View
                style="@style/line_style"/>
        <EditText
                android:id="@+id/et_yzm"
                style="@style/reset_password"
                android:inputType="number"
                android:text="@={resetPasswordModel.yzm}"
                android:hint="@string/yzm"/>
        <View
                style="@style/line_style"/>
        <EditText
                android:id="@+id/et_password"
                style="@style/reset_password"
                android:inputType="textPassword"
                android:text="@={resetPasswordModel.password}"
                android:hint="@string/user_new_password"/>
        <View
                style="@style/line_style"/>
        <EditText
                android:id="@+id/et_affirm_password"
                style="@style/reset_password"
                android:inputType="textPassword"
                android:text="@={resetPasswordModel.affirmPassword}"
                android:hint="@string/user_affirm_new_password"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/distance_gray">
            <TextView
                    android:id="@+id/tv_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_distance_48"
                    android:background="@drawable/blue7_shape"
                    android:text="@string/user_reset_password"
                    android:onClick="@{() -> presneter.onResetPassword(resetPasswordModel)}"
                    android:textSize="@dimen/dimen_size_16"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="@dimen/dimen_distance_15"
                    android:layout_marginLeft="@dimen/dimen_distance_15"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dimen_distance_36"
            />
        </RelativeLayout>


    </LinearLayout>

</layout>