<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dimen_distance_285"
        android:layout_height="@dimen/dimen_distance_128"
        android:gravity="center_horizontal"
        android:background="@drawable/login_white_shape"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_distance_16"
            android:textColor="#ff000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_size_15"
            android:layout_marginTop="@dimen/dimen_distance_16"
            android:textColor="@color/black"
            android:text="@string/yes_username_register"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_distance_1"
            android:layout_marginTop="@dimen/dimen_distance_16"
            android:background="@color/base_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dismiss"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_size_15"
                android:gravity="center"
                android:textColor="@color/tab_blue"
                android:layout_height="match_parent"
                android:text="@string/confirm"/>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</layout>